# ultimate-ttt

./: README.md  docker-compose.yml  docker_start.sh  example.env
animations/decoding-process/: scene.py
backend/: Cargo.toml  diesel.toml
backend/.docker/: dev.dockerfile
backend/migrations/: 20240718165106_games.up.sql
backend/migrations/2024-06-19-175146_create_game/: up.sql
backend/src/: db.rs  errors.rs  main.rs  schema.rs  utils.rs
backend/src/api/: game.rs
backend/src/model/: game.rs  grid.rs  mod.rs
backend/src/observables/game/: controller.rs  model.rs  router.rs
backend/src/observables/grid/: errors.rs  model.rs
backend/src/tests/: grid_test.rs  mod.rs
docs/: README.md  encoding.md
frontend/: index.html
