[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "^0.6"
uuid = {version = "^0.8", features = ["v4"]}
serde = {versio = "^1", features = ["derive"]}
env_logger = "^0.11"
log = "^0.4"
