[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "^0.6"
serde = {version = "^1", features = ["derive"]}
env_logger = "^0.11"
log = "^0.4"
dotenv = "0.15.0"
nanoid = "0.4.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std"] }
